dbd: use ocamlfind across the board for libraries
ocamlfind is a frontend with the package manager.
dbd uses it to find the necessary options to pass to ocamlc/ocamlopt in
order to use the packages managed by findlib (ocamlfind
<ocamlc|ocamlopt> -package).  This is done by overriding the
OCAMLC/OCAMLOPT variables that are already used by ocaml.bbclass to pass
the cross environment options.

In order to avoid re-writing more build-system bits, use ocamlfind for
every library to invoke the byte-code and native compiler and pass
additional package (-linkpkg/-package) options through OCAMLCOPT and
OCAMLOPTOPT. This way OCAMLC and OCAMLOPT can define the specific cross
environment and ocamlfind can provide its services to include packages
through findlib.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

OXT-1787

(cherry picked from commit cefd609171653b6f4e39d3b4b241c152facda4f2)

--- a/dbd/Makefile
+++ b/dbd/Makefile
@@ -19,11 +19,8 @@
 include common.make
 
 PACKAGES = stdext,uuid,log,bigarray,camomile,json,jsonrpc,threads,unix,str,dbus,tscommon,xenmmap,xenbus,xenstore
-OCAMLOPT = ocamlfind ocamlopt -linkpkg -package $(PACKAGES)
-OCAMLC   = ocamlfind ocamlc -linkpkg -package $(PACKAGES)
-
-OCAMLOPTFLAGS += -g -thread -I autogen
-OCAMLCFLAGS += -g -thread -I autogen
+OCAMLCFLAGS += -g -thread -I autogen -linkpkg -package $(PACKAGES)
+OCAMLOPTFLAGS += -g -thread -I autogen -linkpkg -package $(PACKAGES) -thread
 
 db-cmd_OBJS = autogen/db_client db_cmd
 
