rpc-proxy: Use rpc-autogen bindings module
dbus-gen generates a set of bindings for the currently supported API.
Use the built module instead of relying on generating the bindings from
the IDL in the source tree.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/rpc-proxy/rpc-proxy.cabal
+++ b/rpc-proxy/rpc-proxy.cabal
@@ -38,7 +38,8 @@ Executable rpc-proxy
     transformers-base,
     xchwebsocket,
     xchxenstore,
-    xchdb
+    xchdb,
+    rpc-autogen
   Main-Is: Main.hs
   if flag(stubdom)
     GHC-Options: -O2 -fwarn-incomplete-patterns -static -optl-static -optl-pthread
