updatemgr: Use rpc-autogen bindings module
dbus-gen generates a set of bindings for the currently supported API.
Use the built module instead of relying on generating the bindings from
the IDL in the source tree.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/updatemgr/updatemgr.cabal
+++ b/updatemgr/updatemgr.cabal
@@ -35,6 +35,7 @@ Executable updatemgr
     monad-control,
     monad-loops,
     hinotify,
-    HTTP
+    HTTP,
+    rpc-autogen
   Main-Is: Main.hs
   GHC-Options: -O2 -fwarn-incomplete-patterns -dynamic -threaded
