xenmgr: Use rpc-autogen bindings module
dbus-gen generates a set of bindings for the currently supported API.
Use the built module instead of relying on generating the bindings from
the IDL in the source tree.

Signed-off-by: Eric Chanudet <chanudete@ainfosec.com>

--- a/xenmgr/xenmgr.cabal
+++ b/xenmgr/xenmgr.cabal
@@ -33,7 +33,8 @@ Executable xenmgr
     xchargo,
     xchxenstore,
     xchdb,
-    xenmgr-core
+    xenmgr-core,
+    rpc-autogen
 
   Main-Is: Main.hs
   GHC-Options: -O2 -Werror -fwarn-incomplete-patterns -threaded -dynamic
