[ghc8] rpc-proxy: Refresh cabal
Signed-off-by: Nicholas Tsirakis <tsirakisn@ainfosec.com>

--- a/rpc-proxy/rpc-proxy.cabal
+++ b/rpc-proxy/rpc-proxy.cabal
@@ -20,11 +20,10 @@ Executable rpc-proxy
     text,
     mtl,
     network,
-    network-bytestring,
     bytestring,
     utf8-string,
     filepath,
-    dbus-core,
+    dbus,
     hsyslog,
     xch-rpc,
     json,
@@ -37,7 +36,9 @@ Executable rpc-proxy
     transformers-base,
     xchwebsocket,
     xchxenstore,
-    xchdb
+    xchdb,
+    vector,
+    hashtables
   Main-Is: Main.hs
   if flag(stubdom)
     GHC-Options: -O2 -fwarn-incomplete-patterns -static -optl-static -optl-pthread
