[ghc8] xenmgr: Don't raise error for soon-to-be deprecated modules
It's not ideal that we're still using these modules, but without
a rewrite, we can't avoid it.

Signed-off-by: Nicholas Tsirakis <tsirakisn@ainfosec.com>

--- a/xenmgr/xenmgr.cabal
+++ b/xenmgr/xenmgr.cabal
@@ -35,4 +35,4 @@ Executable xenmgr
     xenmgr-core
 
   Main-Is: Main.hs
-  GHC-Options: -O2 -Werror -fwarn-incomplete-patterns -threaded -dynamic
+  GHC-Options: -O2 -Werror -Wno-deprecations -fwarn-incomplete-patterns -threaded -dynamic
