[ghc8] xenmgr: Resolve import conflicts where necessary
And add a few missing language pragmas.

Signed-off-by: Nicholas Tsirakis <tsirakisn@ainfosec.com>

--- a/xenmgr/xenmgr.cabal
+++ b/xenmgr/xenmgr.cabal
@@ -32,7 +32,8 @@ Executable xenmgr
     xchargo,
     xchxenstore,
     xchdb,
-    xenmgr-core
+    xenmgr-core,
+    old-locale
 
   Main-Is: Main.hs
   GHC-Options: -O2 -Werror -Wno-deprecations -fwarn-incomplete-patterns -threaded -dynamic
