[ghc8] xec: Add other-modules
This fixes a compiler warning that eventually gets
treated as an error.

Signed-off-by: Nicholas Tsirakis <tsirakisn@ainfosec.com>

--- a/xec/xec.cabal
+++ b/xec/xec.cabal
@@ -29,6 +29,8 @@ Executable xec
   else
     GHC-Options: -O2 -Werror -fwarn-incomplete-patterns -dynamic
 
+  Other-Modules: Cmd DBusArgo Option Parse Show
+
 Executable xec-vm
   Build-Depends:
     base,
@@ -41,3 +43,5 @@ Executable xec-vm
     GHC-Options: -O2 -Werror -fwarn-incomplete-patterns
   else
     GHC-Options: -O2 -Werror -fwarn-incomplete-patterns -dynamic
+
+  Other-Modules: Option Show
