[ghc8] xenmgr: Add other-modules
This fixes a compiler warning that eventually gets
treated as an error.

Signed-off-by: Nicholas Tsirakis <tsirakisn@ainfosec.com>

--- a/xenmgr/xenmgr.cabal
+++ b/xenmgr/xenmgr.cabal
@@ -37,3 +37,74 @@ Executable xenmgr
 
   Main-Is: Main.hs
   GHC-Options: -O2 -Werror -Wno-deprecations -fwarn-incomplete-patterns -threaded -dynamic
+
+  Other-Modules:
+    Paths_xenmgr
+    Rpc.Autogen.CtxusbDaemonClient
+    Rpc.Autogen.DbusClient
+    Rpc.Autogen.GuestClient
+    Rpc.Autogen.InputDaemonClient
+    Rpc.Autogen.NetworkClient
+    Rpc.Autogen.NetworkDaemonClient
+    Rpc.Autogen.VmDiskServer
+    Rpc.Autogen.VmNicServer
+    Rpc.Autogen.XenmgrConst
+    Rpc.Autogen.XenmgrHostNotify
+    Rpc.Autogen.XenmgrHostServer
+    Rpc.Autogen.XenmgrNotify
+    Rpc.Autogen.XenmgrServer
+    Rpc.Autogen.XenmgrVmConst
+    Rpc.Autogen.XenmgrVmServer
+    Tools.Apptool
+    Tools.Lock
+    Vm.Actions
+    Vm.Balloon
+    Vm.Config
+    Vm.ConfigWriter
+    Vm.DepGraph
+    Vm.Dm
+    Vm.DmTypes
+    Vm.DomainCore
+    Vm.Monad
+    Vm.Monitor
+    Vm.Pci
+    Vm.PciDatabase
+    Vm.PciTypes
+    Vm.Policies
+    Vm.Queries
+    Vm.Queries
+    Vm.QueriesM
+    Vm.React
+    Vm.React
+    Vm.State
+    Vm.Templates
+    Vm.Types
+    Vm.Utility
+    XenMgr.CdLock
+    XenMgr.Config
+    XenMgr.Connect.GuestRpcAgent
+    XenMgr.Connect.InputDaemon
+    XenMgr.Connect.NetworkDaemon
+    XenMgr.Connect.Xl
+    XenMgr.Db
+    XenMgr.Diagnostics
+    XenMgr.Diskmgr
+    XenMgr.Errors
+    XenMgr.Expose.HostObject
+    XenMgr.Expose.ObjectPaths
+    XenMgr.Expose.VmDiskObject
+    XenMgr.Expose.VmNicObject
+    XenMgr.Expose.VmObject
+    XenMgr.Expose.XenmgrObject
+    XenMgr.FetchLog
+    XenMgr.GuestReq
+    XenMgr.Host
+    XenMgr.HostOps
+    XenMgr.Notify
+    XenMgr.PowerManagement
+    XenMgr.PowerManagement
+    XenMgr.Rpc
+    XenMgr.Testing
+    XenMgr.User
+    XenMgr.Vm
+    XenMgr.XM
