[ghc8] updatemgr: Enable RTS options
It seems that RTS options are now disabled by default. Enable
them at build time to allow us to use them at runtime.

Signed-off-by: Nicholas Tsirakis <tsirakisn@ainfosec.com>

--- a/updatemgr/updatemgr.cabal
+++ b/updatemgr/updatemgr.cabal
@@ -36,4 +36,4 @@ Executable updatemgr
     hinotify,
     HTTP
   Main-Is: Main.hs
-  GHC-Options: -O2 -fwarn-incomplete-patterns -dynamic -threaded
+  GHC-Options: -O2 -fwarn-incomplete-patterns -dynamic -threaded -rtsopts
